# NarvalEngine

./: .gitignore  .gitmodules  CMakeLists.txt  README.md
NarvalEngine/: NarvalEngine.sln
NarvalEngine/NarvalEngine/: Engine3D.cpp  Engine3D.h  NarvalEngine.cpp  NarvalEngine.vcxproj  NarvalEngine.vcxproj.filters
includes/glad/include/glad/: glad.h
includes/glad/src/: glad.c
includes/tinyvdb/: tinyvdbio.h
resources/imgs/: test.exr
resources/scenes/: bunnyCloud.json  cloudEighth.json  cloudShowCase.json  cornellBox.json  cornellbox-pbrt.json  cornellbox.json  cornellbox.pbrt  cornellboxpbrtCube.json  cubeMatrix.json  cubeMatrixSolid.json  defaultCube.json  disney-cloud-720p.exr  empty.json  lego.json  offlinetesting.json  pbrt.exr  pbrtcloud.pbrt  pbrtcloudBig.pbrt  playground.json  rustSphere.json  space.json  space2.json  sponza.json  suzanne.json  testSphere.json  testing.json  ukulele.json  veach.json  volume.json  volumeLamp.json  volumes.json
resources/scenes/testing/: disneyCloudSmall.json  singleVoxelVolume.json  surfaceAndLight.json
resources/shaders/: MS_lobeSampling.frag  MS_monteCarlo.frag  MS_rayMarching.frag  billboard.frag  billboard.vert  cloudscape.frag  cloudscape.vert  cloudscape_backup.frag  cloudscape_qsela.frag  cloudscape_t3.frag  composeTex.frag  composeTex.vert  gammaCorrection.frag  gradientBackground.frag  imageDifference.frag  monoColor.frag  monoColor.vert  pathTracingLastPass.frag  pbr.frag  pbr.vert  phong.frag  phong.vert  postProcessing.frag  postProcessing.vert  random.frag  random.vert  screenTex.frag  shvolume.frag  simpleLightDepth.frag  simpleLightDepth.vert  simpleTexture.frag  simpleTexture.vert  uber.frag  visibility.frag  visibility.vert  volume.frag  volume.vert  volumeLBVH-backup.frag  volumeLBVH.frag  volumeLBVH.vert  (+4 more)
resources/tests/: Li.txt  avgHGCos.txt  bsdf.txt  pathDepth.txt  paths.txt
src/: BRDF.cpp  BRDF.h  BeckmannBRDF.cpp  BeckmannBRDF.h  BucketLBVH.h  Camera.h  CloudSystem.cpp  CloudSystem.h  DielectricMaterial.h  DiffuseLight.cpp  DiffuseLight.h  DiffuseMaterial.h  Engine3D.cpp  Engine3D.h  FBO.cpp  FBO.h  GameStateManager.cpp  GameStateManager.h  Geometry.cpp  Geometry.h  GridMaterial.h  InputManager.cpp  InputManager.h  LBTBVH.cpp  LBTBVH.h  LBVH.h  LBVH2.h  LBVH3.cpp  LBVH3.h  LQTBVH.cpp  LQTBVH.h  Material.h  MaterialBRDF.cpp  MaterialBRDF.h  Math.h  Mesh.h  MetalMaterial.h  Model.cpp  Model.h  ModelScene.cpp  (+52 more)
src/core/: BSDF.h  Camera.cpp  Camera.h  Engine3D.cpp  Engine3D.h  EngineState.cpp  EngineState.h  GlossyBSDF.cpp  GlossyBSDF.h  Microfacet.cpp  Microfacet.h  OfflineEngine.cpp  OfflineEngine.h  Renderer.cpp  Renderer.h  RendererAPI.h  ResourceManager.cpp  ResourceManager.h  Scene.cpp  Scene.h  SceneManager.cpp  SceneManager.h  Settings.h  Shader.cpp  Shader.h  StateManager.cpp  StateManager.h  VolumeBSDF.cpp  VolumeBSDF.h  main.cpp
src/integrators/: Integrator.h  VolumetricPathIntegrator.cpp  VolumetricPathIntegrator.h
src/io/: InputManager.cpp  InputManager.h  SceneReader.cpp  SceneReader.h
src/lights/: DiffuseLight.cpp  DiffuseLight.h  DirectionalLight.cpp  DirectionalLight.h  InfiniteAreaLight.h  Light.cpp  Light.h
src/materials/: GridMedia.cpp  GridMedia.h  HomogeneousMedia.cpp  HomogeneousMedia.h  Material.h  Medium.h  Texture.cpp  Texture.h
src/primitives/: AABB.cpp  AABB.h  BVH.cpp  BVH.h  BucketLBVH.h  InstancedModel.cpp  InstancedModel.h  Mesh.cpp  Mesh.h  Model.cpp  Model.h  Point.cpp  Point.h  Primitive.h  Ray.h  Rectangle.cpp  Rectangle.h  Sphere.cpp  Sphere.h  Triangle.cpp  Triangle.h
src/renderer/: RendererGL.cpp  RendererGL.h
src/utils/: ColorPalette.h  ImGuiExt.cpp  ImGuiExt.h  ImGuiStyle.h  Math.h  MurmurHash3.cpp  MurmurHash3.h  Sampling.h  StringID.cpp  StringID.h  Timer.cpp  Timer.h  Utils.h
unitTests/: tests.cpp  tests.h
